--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,2 +1,11 @@
-<h1>Welcome to Meadowlark Travel</h1>
-<img src="./img/logo.png">
+<div class="level">
+  <h1>part1</h1>
+  <h1>Welcome to Meadowlark Travel</h1>
+  <img src="./img/logo.png">
+</div>
+<div class="level">
+  <h1>part2</h1>
+</div>
+<div class="level">
+  <h1>part3</h1>
+</div>
