--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,5 +6,7 @@
   </head>
   <body>
     {{{body}}}
+    <script type="text/javascript" src="./lib/jquery-2.1.3.min.js"></script>
+    <script type="text/javascript" src="./js/main.js"></script>
   </body>
 </html>
