--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,6 +1,6 @@
 <div class="level">
   <h1>part1</h1>
-  <h1>Welcome to Meadowlark Travel</h1>
+  <h1 class="btn1">Welcome to Meadowlark Travel</h1>
   <img src="./img/logo.png">
 </div>
 <div class="level">
