--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,9 +2,11 @@
   <h1>part1</h1>
   <h1 class="btn1">Welcome to Meadowlark Travel</h1>
   <img src="./img/logo.png">
+  <h1 class="window-height"></h1>
 </div>
-<div class="level">
+<div class="level" id="level2">
   <h1>part2</h1>
+  <h1 class="top-count"></h1>
 </div>
 <div class="level">
   <h1>part3</h1>
